# IsItFast

./: .travis.yml  BenchRunner.cpp  BenchRunner.hpp  CMakeLists.txt  README.md  drawgraph.js  main.cpp  schema.xcf  todo.txt  view.html
benchmarks/: FunctionalManipulationBenchmarks.cpp  StaticAdapterBenchmarks.cpp  VirtualPackBenchrmaks.cpp
